src/test/deca/syntax/invalid/personalTests/parser/testCounterParserHelloWorld.deca
// Description :
//      test 1 de programmes syntaxiquement incorrects. Cas HelloWorld.
// Résultats :
//      erreur de syntaxe.
// Historique :
//      créé le 20/12/2023

{
    println("Hello world")
}
